--- a/style.css
+++ b/style.css
@@ -1,12 +1,16 @@
 html{
 	text-align: center;
+	margin: 0 auto !important;
 }
 div{
 	text-align: center;
+	margin: 0 auto !important;
 }
 body {
 	text-align: center;
+	margin: 0 auto !important;
 }
 p{
 	text-align: center;
+	margin: 0 auto !important;
 }
