--- a/style.css
+++ b/style.css
@@ -12,22 +12,15 @@ p{
 }
 .information{
 	text-align: center;
-	float: left;
+	float: center;
 	margin-left: 100px;
+	margin-right: 100px;
 	
-	border:10px solid blue;
 }
 .Downloads{
 	text-align: center;
-	float: right;
-	
-	margin-right: 100px;
-	border:10px solid purple;
-}
-.Discord{
-	text-align: center;
 	float: center;
-	margin-right: 600px;
-	margin-left: 600px;
-	border:10px solid #7289DA;
+	margin-left: 100px;
+	margin-right: 100px;
+	
 }
